# uofthacks-12

./: README.md
backend/scraper/: README.md  app.py  config.py  egress.py  email_parser.py  gemini.py  gmail.py  models.py  pyproject.toml
backend/scraper/app/: config_manager.py  database.py  gemini.py  gmail_client.py  gmail_service.py  ingresser.py  main.py  models.py
backend/scraper/app/services/: egress.py  gmail_service.py
backend/scraper/config/: settings.py
backend/scraper/credentials/: database.py
backend/scraper/db/: database.py
backend/scraper/schemas/: orders.py  tasks.py
backend/scraper/src/: ai.py  database.py  gmail_client.py
backend/scraper/src/services/: egress.py  gmail_service.py
frontend/: .gitignore  eslint.config.mjs  jest.config.ts  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(main)/: layout.tsx  page.tsx
frontend/app/gmail/: page.tsx
frontend/components/: LandingNavbar.tsx  Navbar.tsx
frontend/components/auth/: AuthOptions.tsx  auth-footer.tsx  sign-in-card.tsx  sign-in-form.tsx  sign-out-button.tsx  sign-up-card.tsx  sign-up-form.tsx
frontend/components/ui/: button.tsx  (+5 more)
frontend/config/: navigation.ts
frontend/hooks/: index.ts  useFlowManagement.ts  useFlowSubmission.ts  useSelectionManagement.ts  useWorkflowTitle.ts
frontend/lib/: auth.ts  gmail.ts  rules.ts  utils.ts
frontend/types/: api.ts
infra/: alb.tf  db.tf  ecs.tf  iam.tf  main.tf  outputs.tf  storage.tf  vars.tf  vpc.tf
(+59 files in other folders)
